@@ -1,6 +1,8 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 
+*.cer    binary
+
 # Custom for Visual Studio
 *.cs     diff=csharp
 *.sln    merge=union
