@@ -2,8 +2,9 @@
 # -*- mode: cperl; -*-
 
 # Dump a CSR
-# Usage: dump_csr file
+# Usage: dump_csr [-l] file
 #        If file is not specified, reads from stdin
+#        -l use lax interpetation of Base64
 
 # Copyright (c) 2016 Timothe Litt
 #
@@ -19,16 +20,27 @@
 #
 # See LICENSE for details.
 #
+
+$Getopt::Std::STANDARD_HELP_VERSION = 1;
+
 use strict;
 use warnings;
 
 use Crypt::PKCS10;
 use File::Slurp;
+use Getopt::Std;
+
+our $VERSION = '1.0';
+
+our( $opt_l );
+
+getopts( 'l' );
 
 my $in = read_file( @ARGV? $ARGV[0]: \*STDIN, binmode => ':raw' );
 
 Crypt::PKCS10->setAPIversion(1);
-my $csr = Crypt::PKCS10->new( $in, verifySignature => 0 ) or die Crypt::PKCS10->error;
+my $csr = Crypt::PKCS10->new( $in, verifySignature => 0, ($opt_l? (ignoreNonBase64 => 1): ()) ) or
+  die Crypt::PKCS10->error;
 
 print $csr;
 
