@@ -1,0 +1,4 @@
+# Intentional strange line endings
+csr1.pem -text -merge
+
+
