@@ -1,3 +1,5 @@
+**NOTE** This file intentionally has mixed line endings and is marked '-text -merge' in git.  Do not convert line endings.
+
 Certificate Request:
     Data:
         Version: 0 (0x0)
