@@ -1,0 +1,54 @@
+Version                   : v1
+Subject                   : /O=TestOrg/CN=TestCN
+
+          --Attributes--
+ENROLLMENT_CSP_PROVIDER   : cspName="Microsoft Strong Cryptographic Provider
+                            ",keySpec=2,signature=("",0)
+ENROLLMENT_NAME_VALUE_PAIR: name=CertificateTemplate,value=User
+ClientInformation         : MachineName=Scream,ProcessName=certreq,UserName=
+                            Scream\timothe,clientId=9
+OS_Version                : 6.1.7601.2
+
+          --Extensions--
+certificateTemplateName   : User
+subjectKeyIdentifier      : d0eb27c041d146874ec31a2382d78137a7d35020
+keyUsage                  : critical,digitalSignature
+
+          --Key and signature--
+Key algorithm             : rsaEncryption
+Public key                : 30818902818100bde61d1a46484d72a06b92dc4d5f338682
+                            eae9fef9140c528d75afebb9331e3a53ef5d11884be9169b
+                            cb5b6a1ac45e9e3b6cebb5bac03b9361162d0caa9b9b1d8f
+                            05ed5722e8b39370d7c846d9a707a9b41257c66d60f47cc7
+                            0a57cd961d160870568fc296ede30f57390a6d28a1f6520f
+                            fe5cf495e65e00567724a3964c5f470203010001
+-----BEGIN PUBLIC KEY-----
+MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQC95h0aRkhNcqBrktxNXzOGgurp/vkUDFKNda/r
+uTMeOlPvXRGIS+kWm8tbahrEXp47bOu1usA7k2EWLQyqm5sdjwXtVyLos5Nw18hG2acHqbQSV8Zt
+YPR8xwpXzZYdFghwVo/Clu3jD1c5Cm0oofZSD/5c9JXmXgBWdySjlkxfRwIDAQAB
+-----END PUBLIC KEY-----
+Signature algorithm       : sha1WithRSAEncryption
+Signature                 : 5a2a5c553ab8be96c9ee37e9a3d76237cc579670532282af
+                            3b37c546f91d9b7e2ab4be834260d6efb5e11d3d0266f7d1
+                            00f6d105d4b9b7bbd53c7264d902f50d3bd0353653d7f1ee
+                            bad2b6ba59037620a7c3669e175f9aa2b20dedbaced64df1
+                            bb68b371ec719342dedcd9fec0961ba840966c0a91ab7312
+                            059ac637c81fdb4f
+
+          --Request--
+Test non-base64 characters in data
+-----BEGIN CERTIFICATE REQUEST-----
+> MIICuzCCAiQCAQAwIzEQMA4GA1UECgwHVGVzdE9yZzEPMA0GA1UEAwwGVGVzdENOMIGfMA0GCSqG
+> SIb3DQEBAQUAA4GNADCBiQKBgQC95h0aRkhNcqBrktxNXzOGgurp/vkUDFKNda/ruTMeOlPvXRGI
+>> S+kWm8tbahrEXp47bOu1usA7k2EWLQyqm5sdjwXtVyLos5Nw18hG2acHqbQSV8ZtYPR8xwpXzZYd
+< FghwVo/Clu3jD1c5Cm0oofZSD/5c9JXmXgBWdySjlkxfRwIDAQABoIIBVjAaBgorBgEEAYI3DQID
+MQwWCjYuMS43NjAxLjIwMwYJKwYBBAGCNxUUMSYwJAIBCQwGU2NyZWFtDA5TY3JlYW1cdGltb3Ro
+ZQwHY2VydHJlcTBCBgorBgEEAYI3DQIBMTQwMh4mAEMAZQByAHQAaQBmAGkAYwBhAHQAZQBUAGUA
+bQBwAGwAYQB0AGUeCABVAHMAZQByMFcGCSqGSIb3DQEJDjFKMEgwFwYJKwYBBAGCNxQCBAoeCABV
+AHMAZQByMB0GA1UdDgQWBBTQ6yfAQdFGh07DGiOC14E3p9NQIDAOBgNVHQ8BAf8EBAMCB4AwZgYK
+KwYBBAGCNw0CAjFYMFYCAQIeTgBNAGkAYwByAG8AcwBvAGYAdAAgAFMAdAByAG8AbgBnACAAQwBy
+AHkAcAB0AG8AZwByAGEAcABoAGkAYwAgAFAAcgBvAHYAaQBkAGUAcgMBADANBgkqhkiG9w0BAQUF
+AAOBgQBaKlxVOri+lsnuN+mj12I3zFeWcFMigq87N8VG+R2bfiq0voNCYNbvteEdPQJm99EA9tEF
+1Lm3u9U8cmTZAvUNO9A1NlPX8e660ra6WQN2IKfDZp4XX5qisg3tus7WTfG7aLNx7HGTQt7c2f7A
+lhuoQJZsCpGrcxIFmsY3yB/bTw==
+-----END CERTIFICATE REQUEST-----
